<resources>
    <string name="app_name">Swift</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="text_sign_in">sign in</string>
    <string name="text_sign_up">sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_re_password">Re-Enter Password</string>
    <string name="digits_user_name">abcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="digits_password">abcdefghijklmnopqrstuvwxyz1234567890!@#$%^*-=_+:;,.?</string>
    <string name="digits_email">abcdefghijklmnopqrstuvwxyz1234567890@.</string>
</resources>