<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_header_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/header_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_header_login">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Welcome back!"
                android:textColor="?attr/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login your account"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/tv_welcome"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/create_input_decoration_round"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_login">

                <ImageView
                    android:id="@+id/iv_user_name"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="17dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ic_user_name"
                    android:backgroundTint="?attr/colorSecondary"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="3dp"
                    android:autofillHints="no"
                    android:background="@android:color/transparent"
                    android:digits="@string/digits_user_name"
                    android:hint="@string/hint_user_name"
                    android:imeOptions="actionNext"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:maxLength="16"
                    android:paddingHorizontal="10dp"
                    android:singleLine="true"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_user_name"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/create_input_decoration_round"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraint_user_name">

                <ImageView
                    android:id="@+id/iv_password"
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ic_password"
                    android:backgroundTint="?attr/colorSecondary"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:autofillHints="no"
                    android:background="@android:color/transparent"
                    android:digits="@string/digits_password"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:maxLength="32"
                    android:paddingHorizontal="10dp"
                    android:singleLine="true"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_password"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/create_linear_button_round"
                android:includeFontPadding="false"
                android:text="@string/text_sign_in"
                android:textAllCaps="true"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraint_password" />

            <TextView
                android:id="@+id/tv_dont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Don't have an account yet?"
                android:textColor="@color/color_davys_grey"
                android:textSize="6pt"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />

            <Button
                android:id="@+id/nav_register"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/create_gainsboro_button_round"
                android:includeFontPadding="false"
                android:text="@string/text_sign_up"
                android:textAllCaps="true"
                android:textColor="?attr/colorSecondary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_dont" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>